--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,19 @@
 body {
-  background-color: orange;
+  background-color: #f8e8a6;
+  text-align: center;
+}
+
+.navigation-links a {
+  color: green;
+  margin: 10px;
+}
+
+.navigation-links {
+  margin: 10px auto;
 }
 
 img {
+  border-radius: 10px;
+  margin: 10px auto;
   max-width: 800px;
 }
